fix scroll and autocollape on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,142 +1,167 @@
-html,body {
-  height:100%;
-  width:100%;
-  position:relative;
+html,
+body {
   padding-top: 37px;
-  }
-  
-  .navbar {
-    z-index: 10000;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
-    
-  }
-  
-  .nav-item{
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #fff !important;
-    font-weight: bold;
-  }
-  
-  a.navbar-brand, a.logo {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #fff !important;
-    font-size: 2rem;
-    font-weight: bold;
-    margin-top: 0;
-  }
-  
-  #backgroundCarousal{
-    position:fixed;
-    width:100%;
-    height:100%;
-    z-index:-1;
-  }
-  
-  #backgroundInner {
-  width:100%;
-  height:100%;
-  z-index:0;
-  overflow:hidden;
-  }
-  
-  #backgroundItem {
-  width:100%;
-  height:100%;
-  background-position:center;
-  background-size:cover;
-  z-index:0;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+#home::before,
+#about::before,
+#schedule::before,
+#reservation::before,
+#news::before,
+#contact::before {
+  display: block;
+  content: " ";
+  margin-top: -100px;
+  height: 100px;
+  visibility: hidden;
+}
+
+.navbar {
+  z-index: 10000;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.nav-item {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #fff !important;
+  font-weight: bold;
+}
+
+a.navbar-brand,
+a.logo {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #fff !important;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+#backgroundCarousal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+#backgroundInner {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow: hidden;
+}
+
+#backgroundItem {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
   -webkit-animation: zoom 20s;
   animation: zoom 20s;
-  }
-  
-  #backgroundItem:after {
-    content:'';
-    position:absolute;
-    left:0; top:0;
-    width:100%; height:100%;
-    display:inline-block;
-       background-color: rgba(7, 2, 2, 0.342);
-  }
-  
-  /* #movies-carousel {
+}
+
+#backgroundItem:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  background-color: rgba(7, 2, 2, 0.342);
+}
+
+/* #movies-carousel {
     padding-top: 20px;
     margin-bottom: 60px;
   } */
-  a.carousel-control:hover, a.carousel-control-next:hover {
-    background-image: linear-gradient(to right, rgba(250, 0, 0, 0) 0px, rgba(255, 0, 0, 0.5) 100%);
-   }
-   a.carousel-control-prev:hover{
-    background-image: linear-gradient(to left, rgba(250, 0, 0, 0) 0px, rgba(255, 0, 0, 0.5) 100%);
-   }
-  
-   .carousel-caption {
-    background-color: rgba(1, 57, 95, 1);
-    background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(1, 57, 95, 0));
-   }
+a.carousel-control:hover,
+a.carousel-control-next:hover {
+  background-image: linear-gradient(
+    to right,
+    rgba(250, 0, 0, 0) 0px,
+    rgba(255, 0, 0, 0.5) 100%
+  );
+}
+a.carousel-control-prev:hover {
+  background-image: linear-gradient(
+    to left,
+    rgba(250, 0, 0, 0) 0px,
+    rgba(255, 0, 0, 0.5) 100%
+  );
+}
 
-  .title {
-    text-align: center;
-    border-bottom: 0;
-    color: white;
-  }
-  
-  .title::after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 2px;
-    margin: auto;
-    background-color: #fff;
-  }
+.carousel-caption {
+  background-color: rgba(1, 57, 95, 1);
+  background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(1, 57, 95, 0));
+}
 
-  .about {
-    margin-top: 40px;
-  }
+.title {
+  text-align: center;
+  border-bottom: 0;
+  color: white;
+}
 
-  .schedule-tabs {
-    margin-top: 20px;
-  }
-  
-  #pills-tab {
-    justify-content: center;
-  }
-  
-  #pills-tabContent {
-    margin-bottom: 20px;
-    margin-top: 20px;
-  }
-  
-  .nav-link {
-    color: #fff;
-    
-  }
-  
+.title::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 2px;
+  margin: auto;
+  background-color: #fff;
+}
+
+.about {
+  margin-top: 40px;
+}
+
+.schedule-tabs {
+  margin-top: 20px;
+}
+
+#pills-tab {
+  justify-content: center;
+}
+
+#pills-tabContent {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.nav-link {
+  color: #fff;
+}
 
 element.style {
 }
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-    color: #fff;
-    background-color: black;
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: black;
 }
-  
-  .jumbotron {
-    background-color: rgba(14, 14, 14, 0.692);
-  }
-  
-  .jumbotron h1, p{
-    font-weight: 300;
-    text-align: center;
-    color:white;
-  }
-  
-  .rsv {
-    margin-top: 20px;
-  }
-  .rsv-col {
-    padding: 0px 40px;
-  }
 
-@media (min-width: 992px){
+.jumbotron {
+  background-color: rgba(14, 14, 14, 0.692);
+}
+
+.jumbotron h1,
+p {
+  font-weight: 300;
+  text-align: center;
+  color: white;
+}
+
+.rsv {
+  margin-top: 20px;
+}
+.rsv-col {
+  padding: 0px 40px;
+}
+
+@media (min-width: 992px) {
   .rsv-col {
     padding: 0px 80px;
   }
@@ -145,7 +170,7 @@ element.style {
 .ckbox {
   color: white;
 }
-  
+
 .news-feed {
   margin-top: 20px;
 }
@@ -190,73 +215,71 @@ element.style {
   margin: 0px 10px;
 }
 
-  .social-buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px;
+.social-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.social-buttons a {
+  display: inline-flex;
+  text-decoration: none;
+  font-size: 18px;
+  width: 60px;
+  height: 60px;
+  color: #fff;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 0 8px;
+}
+
+.social-buttons a::before {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background: linear-gradient(45deg, #22a6b3, #30336b);
+  border-radius: 50%;
+  transition: 0.3s ease-in;
+}
+
+.social-buttons a:hover::before {
+  transform: scale(0);
+}
+
+.social-buttons a i {
+  transition: 0.3s ease-in;
+  z-index: 1;
+}
+
+.social-buttons a:hover i {
+  background: linear-gradient(45deg, #22a6b3, #30336b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transform: scale(2.2);
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(1, 1);
   }
-  
-  .social-buttons a{
-    display: inline-flex;
-    text-decoration: none;
-    font-size: 18px;
-    width: 60px;
-    height: 60px;
-    color: #fff;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    margin: 0 8px;
+  to {
+    -webkit-transform: scale(1.5, 1.5);
   }
-  
-  .social-buttons a::before{
-    content: "";
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    background: linear-gradient(45deg,#22a6b3,#30336b);
-    border-radius: 50%;
-    transition: 0.3s ease-in;
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(1, 1);
   }
-  
-  .social-buttons a:hover::before{
-    transform: scale(0);
+  to {
+    transform: scale(1.5, 1.5);
   }
-  
-  .social-buttons a i {
-      transition: 0.3s ease-in;
-      z-index: 1;
-  }
-  
-  .social-buttons a:hover i{
-    background: linear-gradient(45deg,#22a6b3,#30336b);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transform: scale(2.2);
-  }
-  
-  @-webkit-keyframes zoom {
-      from {
-        -webkit-transform: scale(1, 1);
-      }
-      to {
-        -webkit-transform: scale(1.5, 1.5);
-      }
-    }
-    
-    @keyframes zoom {
-      from {
-        transform: scale(1, 1);
-      }
-      to {
-        transform: scale(1.5, 1.5);
-      }
-    }
-    
-    /* .carousel-inner .carousel-item  {
+}
+
+/* .carousel-inner .carousel-item  {
       -webkit-animation: zoom 20s;
       animation: zoom 20s;
     } */
-  
-  
